_generated-doc/3.8/config/quarkus-mongodb-config-group-write-concern-config.adoc

:summaryTableId: quarkus-mongodb-config-group-write-concern-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-mongodb-config-group-write-concern-config_configuration]]link:#quarkus-mongodb-config-group-write-concern-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-mongodb-config-group-write-concern-config_quarkus-mongodb-write-concern-safe]]`link:#quarkus-mongodb-config-group-write-concern-config_quarkus-mongodb-write-concern-safe[quarkus.mongodb.write-concern.safe]`


[.description]
--
Configures the safety. If set to `true`: the driver ensures that all writes are acknowledged by the MongoDB server, or else throws an exception. (see also `w` and `wtimeoutMS`). If set fo
 - `false`: the driver does not ensure that all writes are acknowledged by the MongoDB server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_WRITE_CONCERN_SAFE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_WRITE_CONCERN_SAFE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-mongodb-config-group-write-concern-config_quarkus-mongodb-write-concern-journal]]`link:#quarkus-mongodb-config-group-write-concern-config_quarkus-mongodb-write-concern-journal[quarkus.mongodb.write-concern.journal]`


[.description]
--
Configures the journal writing aspect. If set to `true`: the driver waits for the server to group commit to the journal file on disk. If set to `false`: the driver does not wait for the server to group commit to the journal file on disk.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_WRITE_CONCERN_JOURNAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_WRITE_CONCERN_JOURNAL+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-mongodb-config-group-write-concern-config_quarkus-mongodb-write-concern-w]]`link:#quarkus-mongodb-config-group-write-concern-config_quarkus-mongodb-write-concern-w[quarkus.mongodb.write-concern.w]`


[.description]
--
When set, the driver adds `w: wValue` to all write commands. It requires `safe` to be `true`. The value is typically a number, but can also be the `majority` string.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_WRITE_CONCERN_W+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_WRITE_CONCERN_W+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-write-concern-config_quarkus-mongodb-write-concern-retry-writes]]`link:#quarkus-mongodb-config-group-write-concern-config_quarkus-mongodb-write-concern-retry-writes[quarkus.mongodb.write-concern.retry-writes]`


[.description]
--
If set to `true`, the driver will retry supported write operations if they fail due to a network error.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_WRITE_CONCERN_RETRY_WRITES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_WRITE_CONCERN_RETRY_WRITES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-mongodb-config-group-write-concern-config_quarkus-mongodb-write-concern-w-timeout]]`link:#quarkus-mongodb-config-group-write-concern-config_quarkus-mongodb-write-concern-w-timeout[quarkus.mongodb.write-concern.w-timeout]`


[.description]
--
When set, the driver adds `wtimeout : ms` to all write commands. It requires `safe` to be `true`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB_WRITE_CONCERN_W_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB_WRITE_CONCERN_W_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|


a| [[quarkus-mongodb-config-group-write-concern-config_quarkus-mongodb-mongo-client-configs-write-concern-safe]]`link:#quarkus-mongodb-config-group-write-concern-config_quarkus-mongodb-mongo-client-configs-write-concern-safe[quarkus.mongodb."mongo-client-configs".write-concern.safe]`


[.description]
--
Configures the safety. If set to `true`: the driver ensures that all writes are acknowledged by the MongoDB server, or else throws an exception. (see also `w` and `wtimeoutMS`). If set fo
 - `false`: the driver does not ensure that all writes are acknowledged by the MongoDB server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_SAFE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_SAFE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-mongodb-config-group-write-concern-config_quarkus-mongodb-mongo-client-configs-write-concern-journal]]`link:#quarkus-mongodb-config-group-write-concern-config_quarkus-mongodb-mongo-client-configs-write-concern-journal[quarkus.mongodb."mongo-client-configs".write-concern.journal]`


[.description]
--
Configures the journal writing aspect. If set to `true`: the driver waits for the server to group commit to the journal file on disk. If set to `false`: the driver does not wait for the server to group commit to the journal file on disk.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_JOURNAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_JOURNAL+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-mongodb-config-group-write-concern-config_quarkus-mongodb-mongo-client-configs-write-concern-w]]`link:#quarkus-mongodb-config-group-write-concern-config_quarkus-mongodb-mongo-client-configs-write-concern-w[quarkus.mongodb."mongo-client-configs".write-concern.w]`


[.description]
--
When set, the driver adds `w: wValue` to all write commands. It requires `safe` to be `true`. The value is typically a number, but can also be the `majority` string.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_W+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_W+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mongodb-config-group-write-concern-config_quarkus-mongodb-mongo-client-configs-write-concern-retry-writes]]`link:#quarkus-mongodb-config-group-write-concern-config_quarkus-mongodb-mongo-client-configs-write-concern-retry-writes[quarkus.mongodb."mongo-client-configs".write-concern.retry-writes]`


[.description]
--
If set to `true`, the driver will retry supported write operations if they fail due to a network error.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_RETRY_WRITES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_RETRY_WRITES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-mongodb-config-group-write-concern-config_quarkus-mongodb-mongo-client-configs-write-concern-w-timeout]]`link:#quarkus-mongodb-config-group-write-concern-config_quarkus-mongodb-mongo-client-configs-write-concern-w-timeout[quarkus.mongodb."mongo-client-configs".write-concern.w-timeout]`


[.description]
--
When set, the driver adds `wtimeout : ms` to all write commands. It requires `safe` to be `true`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_W_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MONGODB__MONGO_CLIENT_CONFIGS__WRITE_CONCERN_W_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() Java API documentation] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
